# forecaus-grid-odeon

./: .gitignore  CLAUDE_CODE_BUILD_PLAN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_ss_forecast_benchmark.ipynb  02_ss_causal.ipynb  03_federated_across_substations.ipynb  04_forecast_to_flex.ipynb
notebooks/figures/: PROPOSAL_NUMBERS.md  RESULTS.md  edge_fit.csv  odeon_benchmark.csv
scripts/: edge_benchmark.py  make_notebooks.py  make_odeon_mock.py  make_ss_fixtures.py  regenerate_real_figures.py  reproduce_headline.py
src/forecaus_grid_odeon/: __init__.py  cli.py  config.py  pipeline.py
src/forecaus_grid_odeon/causal/: __init__.py  estimate.py  graph.py  refute.py
src/forecaus_grid_odeon/eval/: __init__.py  backtest.py  causal_break.py  metrics.py  ss_benchmark.py  ss_causal.py
src/forecaus_grid_odeon/features/: __init__.py  build_features.py  calendar.py  ss.py
src/forecaus_grid_odeon/fl/: __init__.py  federated.py  flower_client.py  training.py
src/forecaus_grid_odeon/flex/: __init__.py  congestion.py  pipeline.py
src/forecaus_grid_odeon/forecast/: __init__.py  baselines.py  intervals.py  neural.py  structured.py
src/forecaus_grid_odeon/ingest/: __init__.py  _io.py  entsoe.py  rte.py  weather.py
src/forecaus_grid_odeon/ingest_ss/: __init__.py  aggregate.py  odeon_api.py  real.py  ukpn.py
src/forecaus_grid_odeon/validation/: __init__.py  deterministic_guard.py
tests/: test_aggregate.py  test_causal.py  test_causal_break.py  test_causal_ss.py  test_edge_benchmark.py  test_features.py  test_fl.py  test_fl_train.py  test_flex.py  test_flex_run.py  test_forecast.py  test_forecast_ss.py  test_ingest.py  test_ingest_ss.py  test_neural.py  test_notebooks.py  test_odeon_api.py  test_reproduce_headline.py  test_smoke.py  test_ss_features.py  test_validation.py
tests/fixtures/: entsoe_generation.parquet  entsoe_load.parquet  entsoe_price.parquet  rte_eco2mix.parquet  weather.parquet
tests/fixtures/odeon/: odeon_ss_mock.json
tests/fixtures/ss/: EPN0012345__feeder-1.parquet  EPN0012345__feeder-2.parquet  LPN0004567__feeder-1.parquet  LPN0004567__feeder-3.parquet
tests/fixtures/ss_agg/: EPN0012345.parquet  LPN0004567.parquet  SPN0008901.parquet
